--- a/.github/workflows/opencode-workers-v2.yml
+++ b/.github/workflows/opencode-workers-v2.yml
@@ -67,7 +67,7 @@ jobs:
           GH_TOKEN: ${{ steps.app-token.outputs.token }}
         run: |
           mkdir -p "$HOME/.local/bin"
-          
+
           # Install beads manually (mise doesn't have it)
           gh release download --repo steveyegge/beads --pattern 'beads_*_linux_amd64.tar.gz' --output /tmp/beads.tar.gz
           tar -xzf /tmp/beads.tar.gz -C /tmp && mv /tmp/bd "$HOME/.local/bin/" && rm -rf /tmp/beads.tar.gz
@@ -90,7 +90,7 @@ jobs:
 
           # Get ready tasks that are children of the specific epic
           EPIC_ID="${{ steps.payload.outputs.epic_id }}"
-          
+
           if [ -n "$EPIC_ID" ]; then
             # Get all tasks and filter for children of this epic that are ready
             ALL_TASKS=$("$HOME/.local/bin/bd" list --json)
@@ -184,7 +184,7 @@ jobs:
           GH_TOKEN: ${{ steps.app-token.outputs.token }}
         run: |
           mkdir -p "$HOME/.local/bin"
-          
+
           # Install beads manually (mise doesn't have it)
           gh release download --repo steveyegge/beads --pattern 'beads_*_linux_amd64.tar.gz' --output /tmp/beads.tar.gz
           tar -xzf /tmp/beads.tar.gz -C /tmp && mv /tmp/bd "$HOME/.local/bin/" && rm -rf /tmp/beads.tar.gz
@@ -234,13 +234,13 @@ jobs:
         id: branch
         run: |
           TASK_BRANCH="${{ steps.payload.outputs.branch }}-task-${{ matrix.task_id }}"
-          
+
           # Check if branch exists remotely and delete it first
           if git ls-remote --heads origin "$TASK_BRANCH" | grep -q "$TASK_BRANCH"; then
             echo "Branch $TASK_BRANCH already exists, deleting it first..."
             git push origin --delete "$TASK_BRANCH" || echo "Failed to delete remote branch (may not exist)"
           fi
-          
+
           # Create new branch
           git checkout -b "$TASK_BRANCH"
           echo "task_branch=$TASK_BRANCH" >> $GITHUB_OUTPUT
@@ -367,12 +367,12 @@ jobs:
           GH_TOKEN: ${{ steps.app-token.outputs.token }}
         run: |
           mkdir -p "$HOME/.local/bin"
-          
+
           # Install beads manually (mise doesn't have it)
           gh release download --repo steveyegge/beads --pattern 'beads_*_linux_amd64.tar.gz' --output /tmp/beads.tar.gz
           tar -xzf /tmp/beads.tar.gz -C /tmp && mv /tmp/bd "$HOME/.local/bin/" && rm -rf /tmp/beads.tar.gz
           echo "$HOME/.local/bin" >> $GITHUB_PATH
-          
+
           bun install
 
       - name: Setup git
@@ -447,7 +447,7 @@ jobs:
         id: completed-tasks
         run: |
           TASK_IDS='${{ steps.merge.outputs.completed_task_ids }}'
-          
+
           # Get task details for completed tasks
           TASK_DETAILS=""
           for TASK_ID in $(echo "$TASK_IDS" | jq -r '.[]'); do
@@ -455,7 +455,7 @@ jobs:
             TASK_TITLE=$(echo "$TASK_JSON" | jq -r '.[0].title // "Unknown task"')
             TASK_DETAILS="${TASK_DETAILS}- \`${TASK_ID}\`: ${TASK_TITLE}\n"
           done
-          
+
           echo "completed_tasks_details<<EOF" >> $GITHUB_OUTPUT
           echo -e "$TASK_DETAILS" >> $GITHUB_OUTPUT
           echo "EOF" >> $GITHUB_OUTPUT
@@ -479,6 +479,7 @@ jobs:
       - name: Final build verification
         run: |
           echo "Running final build verification..."
+          bun install
           bun run build
 
       - name: Create pull request
@@ -489,7 +490,7 @@ jobs:
         run: |
           # Only create PR when ALL waves are complete (no more ready tasks)
           echo "All waves complete - creating Pull Request..."
-          
+
           # Check if PR already exists
           EXISTING_PR=$(gh pr list --head ${{ steps.payload.outputs.branch }} --json number --jq '.[0].number')
 
@@ -543,7 +544,7 @@ jobs:
         run: |
           # After closing tasks, check if more children of this epic are ready
           EPIC_ID="${{ steps.payload.outputs.epic_id }}"
-          
+
           if [ -n "$EPIC_ID" ]; then
             # Get all tasks and filter for children of this epic that are ready
             ALL_TASKS=$("$HOME/.local/bin/bd" list --json)
@@ -555,10 +556,10 @@ jobs:
             TASK_COUNT=$(echo "$READY_TASKS" | jq 'length')
             echo "WARNING: No epic_id provided for next wave check" >&2
           fi
-          
+
           echo "ready_count=$TASK_COUNT" >> $GITHUB_OUTPUT
           echo "Next wave ready: $TASK_COUNT tasks for epic $EPIC_ID"
-          
+
           # Sync status first
           "$HOME/.local/bin/bd" sync -m "ci: wave completed - checking for next wave for epic $EPIC_ID"
 
@@ -572,19 +573,19 @@ jobs:
             const conflicts = '${{ steps.merge.outputs.conflict_count }}';
             const nextWaveCount = parseInt('${{ steps.next-wave.outputs.ready_count }}') || 0;
             const completedTasks = `${{ steps.completed-tasks.outputs.completed_tasks_details }}`;
-            
+
             let body = `### 🎉 Wave Complete!\n\n**Tasks Completed:** ${merged}\n**Conflicts Auto-Resolved:** ${conflicts}\n**Pull Request:** #${prNumber}\n**Build:** ✅ Passed\n\n`;
-            
+
             if (completedTasks && completedTasks.trim()) {
               body += `**Completed Tasks:**\n${completedTasks}\n\n`;
             }
-            
+
             if (nextWaveCount > 0) {
               body += `🚀 **Next Wave Starting:** ${nextWaveCount} tasks ready\n\n_Staying in execution mode..._`;
             } else {
               body += `✅ **All Tasks Complete!**\n\nReady for review!`;
             }
-            
+
             await github.rest.issues.createComment({
               owner: context.repo.owner,
               repo: context.repo.repo,
