--- a/.github/workflows/opencode-review.yml
+++ b/.github/workflows/opencode-review.yml
@@ -81,25 +81,50 @@ jobs:
 
           ## Instructions
           1. Check code quality, patterns, and potential issues
-          2. Use gh cli to fetch any failed checks or comments related to this PR for review
-          3. Verify changes match the PR description
-          4. Look for inconsistencies between different parts of the implementation
-          5. Ensure all tasks work together cohesively
-          6. Run 'bun run build' to verify the build passes
+          2. Verify changes match the PR description
+          3. Look for inconsistencies between different parts of the implementation
+          4. Ensure all tasks work together cohesively
+          5. Run 'bun run build' to verify the build passes
 
-          Respond with:
-          - APPROVE or LGTM if changes look good
-          - REQUEST_CHANGES if fixes are needed (list specific issues)
+          IMPORTANT: Your response format determines next workflow steps!
 
-          Your review should include:
-          1. Overall assessment (APPROVE/REQUEST_CHANGES)
-          2. Specific issues found (if any)
-          3. Suggestions for improvement" 2>&1 | tee /tmp/review_output.txt
+          Start your review with EXACTLY one of these formats:
 
+          **APPROVE** (if changes look good):
+          APPROVE
+
+          **REQUEST_CHANGES** (if fixes needed):
+          REQUEST_CHANGES
+
+          Example good review:
+          APPROVE
+
+          The code quality is excellent and no changes are needed.
+
+          Example review with changes:
+          REQUEST_CHANGES
+
+          1. Import statements missing in component.ts
+          2. Add error handling for API calls
+          3. Update tests to cover new functionality
+
+          This format is critical for triggering the correct workflow step." 2>&1 | tee /tmp/review_output.txt
+
+          # Parse decision with fallback patterns
           if grep -qi "APPROVE\|LGTM" /tmp/review_output.txt; then
             echo "decision=approve" >> $GITHUB_OUTPUT
-          else
+            echo "✅ Review parsed as APPROVE"
+          elif grep -qi "REQUEST_CHANGES" /tmp/review_output.txt; then
             echo "decision=request_changes" >> $GITHUB_OUTPUT
+            echo "🔄 Review parsed as REQUEST_CHANGES"
+          else
+            echo "⚠️ REVIEW OUTPUT FORMAT WARNING" >> $GITHUB_OUTPUT
+            echo "Expected: APPROVE or REQUEST_CHANGES" >> $GITHUB_OUTPUT
+            echo "First 3 lines of actual output:" >> $GITHUB_OUTPUT
+            head -3 /tmp/review_output.txt | sed 's/^/  /' >> $GITHUB_OUTPUT
+            # Default to request changes to be safe
+            echo "decision=request_changes" >> $GITHUB_OUTPUT
+            echo "🔄 Defaulting to REQUEST_CHANGES due to format issue"
           fi
 
       - name: Post review comment
