--- a/.github/workflows/opencode.yml
+++ b/.github/workflows/opencode.yml
@@ -155,9 +155,19 @@ jobs:
           3. Create child tasks with detailed descriptions using bd note AND set the epic as parent using: bd dep add <task_id> <epic_id>
           4. Map dependencies between tasks using bd dep add  
           5. IMPORTANT: Ensure all child tasks have the epic as their parent dependency for isolation
-          6. Sync to beads-sync branch
-          7. Post planning summary to GitHub issue
-          8. Output task counts for workflow to capture
+          6. Initialize Beads database properly: handle initialization issues gracefully
+          7. Sync to beads-sync branch
+          8. Post planning summary to GitHub issue
+          9. Output task counts for workflow to capture
+
+          ## Database Initialization Guidance
+
+          If you encounter database issues:
+          - For existing databases: Try `bd list` first, then create tasks with existing data
+          - For missing hooks: Run `bd init` without --force to work with current state
+          - For multiple JSONL files: Use `bd` commands normally - they handle this automatically
+          - The workflow will handle initialization issues automatically
+          - Focus on creating tasks rather than database setup
 
           Store detailed task specifications in Beads notes using this format:
 
@@ -188,30 +198,21 @@ jobs:
         run: |
           TOTAL=$(bd list --json 2>/dev/null | jq 'length' || echo '0')
           
-          # Find the epic ID for this issue (matches "Issue #<number>: <title>" pattern)
+          # Find epic ID for this issue (matches "Issue #<number>: <title>" pattern)
           EPIC_ID=$(bd list --json 2>/dev/null | jq --arg issue_pattern "Issue #${{ github.event.issue.number }}:" '[.[] | select(.title | startswith($issue_pattern))] | .[0].id // empty')
           
           if [ -n "$EPIC_ID" ]; then
             # Get ready tasks that are children of this epic
-            READY=$(bd list --json 2>/dev/null | jq --arg epic_id "$EPIC_ID" '[.[] | select(.status == "open" and (.dependencies // [] | contains([$epic_id]) | not) and (.blocked_by // [] | length == 0)] | length' || echo '0')
-            
-            # Get the actual ready tasks (children of this epic)
             ALL_TASKS=$(bd list --json 2>/dev/null)
             READY_TASKS=$(echo "$ALL_TASKS" | jq --arg epic_id "$EPIC_ID" '[.[] | select(.status == "open" and (.dependencies // [] | contains([$epic_id]) | not) and (.blocked_by // [] | length == 0) and ((.parent // empty) == $epic_id)]')
             TASK_IDS=$(echo "$READY_TASKS" | jq -c '[.[].id]' || echo '[]')
             TASK_TITLES=$(echo "$READY_TASKS" | jq -c '[.[].title]' || echo '[]')
-            
-            echo "epic_id=$EPIC_ID" >> $GITHUB_OUTPUT
-            echo "total=$TOTAL" >> $GITHUB_OUTPUT
-            echo "ready=$READY" >> $GITHUB_OUTPUT
-            echo "task_ids=$TASK_IDS" >> $GITHUB_OUTPUT
-            echo "task_titles=$TASK_TITLES" >> $GITHUB_OUTPUT
           else
-            echo "epic_id=" >> $GITHUB_OUTPUT
-            echo "total=$TOTAL" >> $GITHUB_OUTPUT
-            echo "ready=0" >> $GITHUB_OUTPUT
-            echo "task_ids=[]" >> $GITHUB_OUTPUT
-            echo "task_titles=[]" >> $GITHUB_OUTPUT
+            TOTAL=$(bd list --json 2>/dev/null | jq 'length' || echo '0')
+            READY=$(bd ready --json 2>/dev/null | jq 'length' || echo '0')
+            # Also output ready tasks as JSON for workers  
+            TASK_IDS=$(bd ready --json 2>/dev/null | jq -c '[.[].id]' || echo '[]')
+            TASK_TITLES=$(bd ready --json 2>/dev/null | jq -c '[.[].title]' || echo '[]')
           fi
 
       - name: Post plan summary
