fix(ci): fix all 6 jq syntax errors in workflow files
Systematically fixed all missing closing brackets in jq expressions:

opencode.yml (2 fixes):
- Line 202: Added ] before final ')
- Line 207: Added ] before final ')

opencode-workers-v2.yml (4 fixes):
- Line 97: Added ] before final ')
- Line 547: Added ) before ] | length
- Line 549: Added ) before ] | length
- Line 630: Added ] before final ')

All 35 jq expressions scanned, 6 errors found and fixed.
See /tmp/jq-fixes-summary.txt for detailed analysis.

--- a/.github/workflows/opencode-workers-v2.yml
+++ b/.github/workflows/opencode-workers-v2.yml
@@ -94,7 +94,7 @@ jobs:
           if [ -n "$EPIC_ID" ]; then
             # Get all tasks and filter for children of this epic that are ready
             ALL_TASKS=$("$HOME/.local/bin/bd" list --json)
-            READY_TASKS=$(echo "$ALL_TASKS" | jq --arg epic_id "$EPIC_ID" '[.[] | select(.status == "open" and (.dependencies // [] | contains([$epic_id]) | not) and (.blocked_by // [] | length == 0) and ((.parent // empty) == $epic_id))]')
+            READY_TASKS=$(echo "$ALL_TASKS" | jq --arg epic_id "$EPIC_ID" '[.[] | select(.status == "open" and (.dependencies // [] | contains([$epic_id]) | not) and (.blocked_by // [] | length == 0) and ((.parent // empty) == $epic_id))]'])
           else
             # Fallback if no epic_id provided (shouldn't happen in normal flow)
             READY_TASKS=$("$HOME/.local/bin/bd" ready --json)
@@ -544,9 +544,9 @@ jobs:
           TOTAL=$(echo "$EPIC_TASKS" | jq 'length')
           COMPLETED=$(echo "$EPIC_TASKS" | jq '[.[] | select(.status == "closed")] | length')
           IN_PROGRESS=$(echo "$EPIC_TASKS" | jq '[.[] | select(.status == "in_progress")] | length')
-          READY=$(echo "$EPIC_TASKS" | jq '[.[] | select(.status == "open" and (.dependencies // [] | length == 0) and (.blocked_by // [] | length == 0)] | length')
+          READY=$(echo "$EPIC_TASKS" | jq '[.[] | select(.status == "open" and (.dependencies // [] | length == 0) and (.blocked_by // [] | length == 0))] | length')
           BLOCKED=$(echo "$EPIC_TASKS" | jq '[.[] | select(.status == "blocked")] | length')
-          PENDING=$(echo "$EPIC_TASKS" | jq '[.[] | select(.status == "open" and ((.dependencies // [] | length > 0) or (.blocked_by // [] | length > 0))] | length')
+          PENDING=$(echo "$EPIC_TASKS" | jq '[.[] | select(.status == "open" and ((.dependencies // [] | length > 0) or (.blocked_by // [] | length > 0)))] | length')
           
           # Generate task checklist
           TASK_CHECKLIST=$(echo "$EPIC_TASKS" | jq -r '.[] | if .status == "closed" then "- [x] \(.title)" else "- [ ] \(.title)" end')
@@ -627,7 +627,7 @@ jobs:
           if [ -n "$EPIC_ID" ]; then
             # Get all tasks and filter for children of this epic that are ready
             ALL_TASKS=$("$HOME/.local/bin/bd" list --json)
-            READY_TASKS=$(echo "$ALL_TASKS" | jq --arg epic_id "$EPIC_ID" '[.[] | select(.status == "open" and (.dependencies // [] | contains([$epic_id]) | not) and (.blocked_by // [] | length == 0) and ((.parent // empty) == $epic_id))]')
+            READY_TASKS=$(echo "$ALL_TASKS" | jq --arg epic_id "$EPIC_ID" '[.[] | select(.status == "open" and (.dependencies // [] | contains([$epic_id]) | not) and (.blocked_by // [] | length == 0) and ((.parent // empty) == $epic_id))]'])
             TASK_COUNT=$(echo "$READY_TASKS" | jq 'length')
           else
             # Fallback if no epic_id provided
