fix(ci): remove extra closing brackets added by overzealous agent
The previous agent fix over-corrected by adding EXTRA closing brackets.

Fixed 4 locations where ']') was changed to ')':
- opencode.yml line 202: EPIC_ID jq expression
- opencode.yml line 207: READY_TASKS jq expression
- opencode-workers-v2.yml line 97: READY_TASKS jq expression
- opencode-workers-v2.yml line 630: READY_TASKS jq expression

Correct pattern: '[.[] | select(...)]')  NOT  '[.[] | select(...)]]')

--- a/.github/workflows/opencode-workers-v2.yml
+++ b/.github/workflows/opencode-workers-v2.yml
@@ -94,7 +94,7 @@ jobs:
           if [ -n "$EPIC_ID" ]; then
             # Get all tasks and filter for children of this epic that are ready
             ALL_TASKS=$("$HOME/.local/bin/bd" list --json)
-            READY_TASKS=$(echo "$ALL_TASKS" | jq --arg epic_id "$EPIC_ID" '[.[] | select(.status == "open" and (.dependencies // [] | contains([$epic_id]) | not) and (.blocked_by // [] | length == 0) and ((.parent // empty) == $epic_id))]'])
+            READY_TASKS=$(echo "$ALL_TASKS" | jq --arg epic_id "$EPIC_ID" '[.[] | select(.status == "open" and (.dependencies // [] | contains([$epic_id]) | not) and (.blocked_by // [] | length == 0) and ((.parent // empty) == $epic_id))]')
           else
             # Fallback if no epic_id provided (shouldn't happen in normal flow)
             READY_TASKS=$("$HOME/.local/bin/bd" ready --json)
@@ -627,7 +627,7 @@ jobs:
           if [ -n "$EPIC_ID" ]; then
             # Get all tasks and filter for children of this epic that are ready
             ALL_TASKS=$("$HOME/.local/bin/bd" list --json)
-            READY_TASKS=$(echo "$ALL_TASKS" | jq --arg epic_id "$EPIC_ID" '[.[] | select(.status == "open" and (.dependencies // [] | contains([$epic_id]) | not) and (.blocked_by // [] | length == 0) and ((.parent // empty) == $epic_id))]'])
+            READY_TASKS=$(echo "$ALL_TASKS" | jq --arg epic_id "$EPIC_ID" '[.[] | select(.status == "open" and (.dependencies // [] | contains([$epic_id]) | not) and (.blocked_by // [] | length == 0) and ((.parent // empty) == $epic_id))]')
             TASK_COUNT=$(echo "$READY_TASKS" | jq 'length')
           else
             # Fallback if no epic_id provided
