--- a/packages/auth/tsconfig.json
+++ b/packages/auth/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "@acme/tsconfig/base.json",
+  "extends": "@descope-trust-center/tsconfig/base.json",
   "include": ["src", "*.ts"],
   "exclude": ["node_modules"]
 }
