--- a/packages/ui/components.json
+++ b/packages/ui/components.json
@@ -10,7 +10,7 @@
     "cssVariables": true
   },
   "aliases": {
-    "utils": "@acme/ui",
+    "utils": "@descope-trust-center/ui",
     "components": "src/",
     "ui": "src/"
   }
