--- a/tooling/eslint/tsconfig.json
+++ b/tooling/eslint/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "@acme/tsconfig/base.json",
+  "extends": "@descope-trust-center/tsconfig/base.json",
   "include": ["."],
   "exclude": ["node_modules"]
 }
