feat(test): add Playwright visual regression test suite
- Add Playwright config with 3 viewports (desktop, tablet, mobile)
- Create 10 visual regression tests for Trust Center components
- Add CI workflow job for visual regression tests
- Add test scripts (test:visual, test:visual:update, test:visual:ui)
- Fix footer.tsx lint errors (unnecessary conditionals)
- Update .gitignore for Playwright artifacts

--- a/package.json
+++ b/package.json
@@ -22,11 +22,16 @@
     "lint:ws": "pnpm dlx sherif@latest",
     "postinstall": "pnpm lint:ws",
     "typecheck": "turbo run typecheck",
-    "ui-add": "turbo run ui-add"
+    "ui-add": "turbo run ui-add",
+    "test:visual": "playwright test",
+    "test:visual:update": "playwright test --update-snapshots",
+    "test:visual:ui": "playwright test --ui"
   },
   "devDependencies": {
     "@descope-trust-center/prettier-config": "workspace:*",
+    "@playwright/test": "^1.57.0",
     "@turbo/gen": "^2.5.8",
+    "@types/node": "catalog:",
     "dotenv-cli": "^10.0.0",
     "prettier": "catalog:",
     "turbo": "^2.5.8",
