ci: disable visual regression in CI due to cross-platform font differences
Baselines captured on macOS differ from Linux CI runners by 2-5%
even with maxDiffPixelRatio tolerance. Tests remain available for
local development (pnpm test:visual).

Future options documented in workflow comments:
- Docker for consistent snapshot generation
- Linux-specific baselines
- Cloud visual testing service (Chromatic/Percy)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,8 +59,16 @@ jobs:
       - name: Typecheck
         run: pnpm typecheck
 
+  # Visual regression tests are available for local development (pnpm test:visual)
+  # but skipped in CI due to cross-platform font rendering differences.
+  # Baselines captured on macOS differ from Linux CI runners by 2-5% even with
+  # maxDiffPixelRatio tolerance. Options for future:
+  # - Use Docker for consistent snapshot generation
+  # - Generate Linux-specific baselines in CI
+  # - Use Chromatic or Percy for cloud visual testing
   visual-regression:
     runs-on: ubuntu-latest
+    if: false # Disabled - see comment above
     steps:
       - uses: actions/checkout@v5
 
