--- a/turbo.json
+++ b/turbo.json
@@ -51,7 +51,8 @@
     "AUTH_DISCORD_SECRET",
     "AUTH_REDIRECT_PROXY_URL",
     "AUTH_SECRET",
-    "PORT"
+    "PORT",
+    "ADMIN_EMAILS"
   ],
   "globalPassThroughEnv": [
     "NODE_ENV",
