--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -31,7 +31,8 @@
     "@descope-trust-center/tsconfig": "workspace:*",
     "eslint": "catalog:",
     "prettier": "catalog:",
-    "typescript": "catalog:"
+    "typescript": "catalog:",
+    "vitest": "catalog:"
   },
   "prettier": "@descope-trust-center/prettier-config"
 }
