--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "extends": "@descope-trust-center/tsconfig/compiled-package.json",
+  "compilerOptions": {
+    "types": ["vitest/globals"]
+  },
   "include": ["src"],
   "exclude": ["node_modules"]
 }
