--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -36,15 +36,19 @@
     "@descope-trust-center/prettier-config": "workspace:*",
     "@descope-trust-center/tailwind-config": "workspace:*",
     "@descope-trust-center/tsconfig": "workspace:*",
+    "@testing-library/react": "^16.3.0",
     "@types/node": "catalog:",
     "@types/react": "catalog:react19",
     "@types/react-dom": "catalog:react19",
+    "@vitejs/plugin-react": "catalog:",
     "eslint": "catalog:",
     "jiti": "^2.5.1",
+    "jsdom": "^26.1.0",
     "prettier": "catalog:",
     "tailwindcss": "catalog:",
     "tw-animate-css": "^1.4.0",
-    "typescript": "catalog:"
+    "typescript": "catalog:",
+    "vitest": "catalog:"
   },
   "prettier": "@descope-trust-center/prettier-config"
 }
