--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -9,6 +9,7 @@
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "lint": "eslint --flag unstable_native_nodejs_ts_config",
     "start": "pnpm with-env next start",
+    "test": "vitest run",
     "typecheck": "tsc --noEmit",
     "with-env": "dotenv -e ../../.env --"
   },
@@ -36,7 +37,9 @@
     "@descope-trust-center/prettier-config": "workspace:*",
     "@descope-trust-center/tailwind-config": "workspace:*",
     "@descope-trust-center/tsconfig": "workspace:*",
+    "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/node": "catalog:",
     "@types/react": "catalog:react19",
     "@types/react-dom": "catalog:react19",
