fix: Accessibility improvements (WCAG 2.1 AA) (#37)

--- a/apps/nextjs/tsconfig.json
+++ b/apps/nextjs/tsconfig.json
@@ -6,7 +6,8 @@
     "paths": {
       "~/*": ["./src/*"]
     },
-    "plugins": [{ "name": "next" }]
+    "plugins": [{ "name": "next" }],
+    "types": ["vitest/globals"]
   },
   "include": [".", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
