feat(auth): replace Better Auth with Descope authentication
- Replace better-auth package with @descope/nextjs-sdk
- Add AuthProvider wrapper in root layout
- Implement Descope flow component for sign-up/sign-in
- Update tRPC context to extract session from Descope JWT
- Delete Better Auth API route and CLI script
- Simplify DB schema: remove auth tables, add lightweight User table
- Add drizzle-orm override to prevent version mismatch
- Update environment variables for Descope

Closes #43

--- a/apps/nextjs/package.json
+++ b/apps/nextjs/package.json
@@ -19,13 +19,13 @@
     "@descope-trust-center/db": "workspace:*",
     "@descope-trust-center/ui": "workspace:*",
     "@descope-trust-center/validators": "workspace:*",
+    "@descope/nextjs-sdk": "catalog:",
     "@t3-oss/env-nextjs": "^0.13.8",
     "@tanstack/react-form": "catalog:",
     "@tanstack/react-query": "catalog:",
     "@trpc/client": "catalog:",
     "@trpc/server": "catalog:",
     "@trpc/tanstack-react-query": "catalog:",
-    "better-auth": "catalog:",
     "next": "^16.0.9",
     "react": "catalog:react19",
     "react-dom": "catalog:react19",
