--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -38,6 +38,8 @@ onlyBuiltDependencies:
 
 overrides:
   "@types/minimatch": 5.1.2
+  # Pin drizzle-orm to prevent multiple versions from different peer dependency resolutions
+  # which causes "Types have separate declarations of a private property" errors
   drizzle-orm: 0.44.7
   lightningcss: 1.30.1
   vite: 7.1.12
