--- a/turbo.json
+++ b/turbo.json
@@ -52,10 +52,7 @@
   },
   "globalEnv": [
     "POSTGRES_URL",
-    "AUTH_DISCORD_ID",
-    "AUTH_DISCORD_SECRET",
-    "AUTH_REDIRECT_PROXY_URL",
-    "AUTH_SECRET",
+    "NEXT_PUBLIC_DESCOPE_PROJECT_ID",
     "PORT",
     "ADMIN_EMAILS"
   ],
