feat(monitoring): Add Sentry error tracking integration
- Add @sentry/nextjs with client, server, and edge configs
- Add ErrorBoundary component for React error catching
- Add global error.tsx page for Next.js error handling
- Add /api/test-sentry endpoint for verification
- Update next.config.js with Sentry webpack plugin
- Add Sentry env vars to env.ts (optional, graceful degradation)
- Add SENTRY_SETUP.md documentation

Closes #57

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,10 @@ POSTGRES_URL="postgres://postgres.[USERNAME]:[PASSWORD]@aws-0-eu-central-1.poole
 # Descope Authentication
 # Get your Project ID from the Descope Console: https://app.descope.com/settings/project
 NEXT_PUBLIC_DESCOPE_PROJECT_ID='your-descope-project-id'
+
+# Sentry Error Tracking (optional - leave empty for local dev)
+# Get these from your Sentry project settings: https://sentry.io/settings/
+NEXT_PUBLIC_SENTRY_DSN=''
+SENTRY_ORG=''
+SENTRY_PROJECT=''
+SENTRY_AUTH_TOKEN=''
