--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "test": "turbo run test",
     "typecheck": "turbo run typecheck",
     "ui-add": "turbo run ui-add",
-    "test:visual": "playwright test",
-    "test:visual:update": "playwright test --update-snapshots",
-    "test:visual:ui": "playwright test --ui"
+    "test:e2e": "playwright test tests/e2e/",
+    "test:visual": "playwright test tests/visual/",
+    "test:visual:update": "playwright test tests/visual/ --update-snapshots",
+    "test:visual:ui": "playwright test --ui",
+    "test:playwright": "playwright test"
   },
   "devDependencies": {
     "@descope-trust-center/prettier-config": "workspace:*",
