chore: Update AI agent configuration and tooling
- Update AGENTS.md with comprehensive guide (~150 lines)
  - Build/lint/test commands including single test execution
  - Code style guidelines (imports, types, naming)
  - GitHub workflow with labels and issue management
  - Common gotchas specific to this codebase
- Update mise.toml with required tools (node, pnpm, postgres, gh)
- Add .opencode/opencode.json with MCP servers:
  - context7: Library documentation lookup
  - next-devtools: Next.js dev server integration
  - fetch: Web fetching with markdown conversion
  - playwright: Browser automation for testing
- Update .opencode/rules with project-specific patterns

--- a/mise.toml
+++ b/mise.toml
@@ -1,4 +1,10 @@
 [tools]
 node = "22"
-opencode = "latest"
 pnpm = "10"
+opencode = "latest"
+
+# Database tools
+postgres = "17"
+
+# Development tools
+gh = "latest"          # GitHub CLI for issue/PR management
